--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-js-hw-11",
+  "name": "Image Search",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,6 +15,7 @@
   "author": "Volodymyr Zahrebelnyi <vov41kttt@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "izitoast": "^1.4.0",
     "simplelightbox": "^2.14.3",
     "vite-plugin-full-reload": "^1.0.5",
